# goit-pythonweb-hw-12

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml  run.sh
docs/: conf.py  index.rst
migrations/: env.py
migrations/versions/: __init__.py
src/api/: auth.py  contacts.py  users.py  utils.py
src/conf/: config.py
src/database/: db.py  models.py
src/repository/: contacts.py  users.py
src/schemas/: contacts.py  users.py
src/services/: auth.py  cache.py  contacts.py  email.py  upload_file.py  users.py
src/templates/: password_reset.html  password_reset_form.html
tests/: conftest.py  test_auth_integration.py  test_contacts_integration.py  test_contacts_repository_unit.py  test_users_repository_unit.py  test_utils_integration.py
