[project]
name = "app"
version = "0.1.0"
description = ""
authors = [
    {name = "Oleksii Aleksieiev",email = "reneguarde@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "alembic (>=1.14.1,<2.0.0)",
    "fastapi (>=0.115.6,<0.116.0)",
    "sqlalchemy (>=2.0.37,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "pydantic[email] (>=2.10.5,<3.0.0)",
    "phonenumbers (>=8.13.53,<9.0.0)",
    "pydantic-extra-types (>=2.10.2,<3.0.0)",
    "faker (>=34.0.2,<35.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "libgravatar (>=1.0.4,<2.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "passlib (>=1.7.4,<2.0.0)",
    "bcrypt (==4.0.1)",
    "slowapi (>=0.1.9,<0.2.0)",
    "cloudinary (>=1.42.1,<2.0.0)",
    "pydantic-settings (>=2.7.1,<3.0.0)",
    "fastapi-mail (>=1.4.2,<2.0.0)",
    "sphinx (>=8.1.3,<9.0.0)",
    "redis (>=5.2.1,<6.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
pytest = "^8.3.4"
pytest-asyncio = "^0.25.2"
httpx = "^0.28.1"
aiosqlite = "^0.21.0"
pytest-cov = "^6.0.0"

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_default_fixture_loop_scope = "function"
